# AppleCollector

./: .env.example  .gitignore  README.md  ReadMe.md  api.py  apple_fetch.py  cryptic.py  date.py  entrypoint.py  example.cron.sh  export.py  fetch_location_and_post_reports.py  fetch_location_for_specific_devices.py  generate_keys.py  haystack.py  helpers.py  icloud.py  launched.AppleCollector.plist  main.py  manage.py  package-lock.json  package.json  passwd.sh  plist.py  pyproject.toml  refresh_credentials.py  refresh_credentials_without_scheduling.py  report.py  request_reports.py  requirements.txt  serverless.yml  setup.sh
.github/workflows/: build-deploy.yml
app/: api.py  apple_fetch.py  auth.py  credentials.py  cryptic.py  date.py  device_service.py  dtos.py  exceptions.py  haystack.py  helpers.py  http_credentials.py  logging.json  models.py  report.py  sentry.py  settings.py  sqs.py
app/credentials/: api.py  base.py  dynamodb.py
commands/: credentials.py  location_and_reports.py
